--- a/HW/hwserver/package.json
+++ b/HW/hwserver/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "childprocess": "^2.0.2",
+    "exec-then": "^1.3.1",
     "express": "^4.17.1",
     "mariadb": "^2.1.5",
     "mybatis-mapper": "^0.6.5",
