--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,7 @@
     "cross-env": "^6.0.3",
     "material-table": "^1.55.0",
     "react": "^16.12.0",
-    "react-chartjs-2": "^2.8.0",
+    "react-chartjs-2": "^2.9.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.0-rc.1",
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-slick": "^0.25.2",
+    "react-spinners": "^0.8.0",
     "react-swipeable-views": "^0.13.8",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
